# lazy-mcp

./: .gitignore  LICENSE.md  README.md  dispathcer-6.md  errors-2.md  example-11.md  gateway-10.md  gateway-7.md  init-8.md  lru-3.md  matacher-4.md  mcp_compat-9.md  models-1.md  prerequistes.md  py-rpoject.md  pyproject.toml  registry-5.md  requirements.txt
examples/: basic_usage.py  server_usage.py
lazy_mcp/: __init__.py  dispatcher.py  errors.py  gateway.py  lru.py  matcher.py  mcp_compat.py  models.py  registry.py  server.py
tests/: real_server_test.py  test_dispatcher.py  test_errors.py  test_integration.py  test_lru.py  test_matcher.py  test_models.py  test_registry.py  test_server.py
